# AniGen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: experiments.py  experiments2.py  scan.py
src/: colors.cpp  colors.hpp  convolution.hpp  main.cpp  map.cpp  map.hpp  mapmaker.cpp  mapmaker.hpp  matrix.hpp  pixelsimilarity.cpp  pixelsimilarity.hpp  spritesheet.cpp  spritesheet.hpp  utils.hpp  vectorext.hpp
src/core/: map.cpp  map.hpp  optim.cpp  optim.hpp  pixelchains.cpp  pixelchains.hpp  pixelsimilarity.cpp  pixelsimilarity.hpp
src/eval/: eval.cpp  eval.hpp
src/math/: convolution.hpp  matrix.hpp  vectorext.hpp
src/tests/: tests.cpp  tests.hpp
src/utils/: colors.cpp  spritesheet.cpp  spritesheet.hpp
tests/: tests.cpp
